optimise for mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 margin: 0;
                 padding: 0;
                 overflow-x: hidden;
-                scroll-padding: 1rem;
             }
             *, *::after, *::before {
                 font-family: 'Montserrat', sans-serif;
@@ -45,6 +44,7 @@
                 top: 0;
                 left: 0;
                 right: 0;
+                width: 100vw;
                 z-index: 999;
                 padding: 15px 20px;
                 display: flex;
