--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
             }
 
             nav {
-                position: fixed;
+                /* position: fixed;
                 top: 0;
                 left: 0;
                 right: 0;
-                width: 100vw;
+                width: 100vw; */
+                position: sticky;
+                top: 0;
                 z-index: 999;
                 padding: 15px 20px;
                 display: flex;
