--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 width: 100vw; */
                 position: sticky;
                 top: 0;
+                width: 100vw;
                 z-index: 999;
                 padding: 15px 20px;
                 display: flex;
@@ -207,7 +208,8 @@
             .institutes {
                 display: flex;
                 flex-direction: column;
-                gap: 1rem;
+                /* gap: 1rem; */
+                margin: 1rem;
             }
             .sect2 .inst {
                 width: 90%;
@@ -216,7 +218,8 @@
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
-                gap: 1rem;
+                /* gap: 1rem; */
+                margin: 1rem;
 
                 text-align: center;
                 padding: 20px 10px;
@@ -260,7 +263,8 @@
                 display: flex;
                 align-items: center;
                 padding: 10px;
-                gap: 1rem;
+                /* gap: 1rem; */
+                margin: 1rem;
             }
             .rating img {
                 display: block;
@@ -326,7 +330,8 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                gap: 1rem;
+                /* gap: 1rem; */
+                margin: 1rem;
             }
             .sect4 img {
                 display: block;
@@ -392,7 +397,8 @@
                 .institutes {
                     display: flex;
                     flex-direction: row;
-                    gap: 1rem;
+                    /* gap: 1rem; */
+                    margin: 1rem;
                 }
                 .sect2 .inst {
                     flex: 100%;
@@ -401,7 +407,8 @@
                     flex-direction: column;
                     justify-content: space-evenly;
                     align-items: center;
-                    gap: 2rem;
+                    /* gap: 2rem; */
+                    margin: 2rem;
                 
                     text-align: center;
                     padding: 20px 10px;
@@ -415,7 +422,9 @@
                     flex-direction: row;
                     align-items: center;
                     justify-content: space-evenly;
-                    gap: 1rem;
+                    /* gap: 1rem; */
+                    margin: 1rem;
+
                 }
                 .sect1 h1 {
                     font-size: 3rem;
