--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                 left: -50%;
                 opacity: 0.5;
                 transition: opacity 1s, left 1s ease-in-out, box-shadow .5s;
+                overflow-x: hidden;
             }
             .inst>img {
                 display: block;
