--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                 width: 100vw; */
                 position: sticky;
                 top: 0;
-                width: 100vw;
                 z-index: 999;
                 padding: 15px 20px;
                 display: flex;
@@ -208,8 +207,7 @@
             .institutes {
                 display: flex;
                 flex-direction: column;
-                /* gap: 1rem; */
-                margin: 1rem;
+                gap: 1rem;
             }
             .sect2 .inst {
                 width: 90%;
@@ -218,8 +216,7 @@
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
-                /* gap: 1rem; */
-                margin: 1rem;
+                gap: 1rem;
 
                 text-align: center;
                 padding: 20px 10px;
@@ -264,8 +261,7 @@
                 display: flex;
                 align-items: center;
                 padding: 10px;
-                /* gap: 1rem; */
-                margin: 1rem;
+                gap: 1rem;
             }
             .rating img {
                 display: block;
@@ -331,8 +327,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                /* gap: 1rem; */
-                margin: 1rem;
+                gap: 1rem;
             }
             .sect4 img {
                 display: block;
@@ -398,8 +393,7 @@
                 .institutes {
                     display: flex;
                     flex-direction: row;
-                    /* gap: 1rem; */
-                    margin: 1rem;
+                    gap: 1rem;
                 }
                 .sect2 .inst {
                     flex: 100%;
@@ -408,8 +402,7 @@
                     flex-direction: column;
                     justify-content: space-evenly;
                     align-items: center;
-                    /* gap: 2rem; */
-                    margin: 2rem;
+                    gap: 2rem;
                 
                     text-align: center;
                     padding: 20px 10px;
@@ -423,9 +416,7 @@
                     flex-direction: row;
                     align-items: center;
                     justify-content: space-evenly;
-                    /* gap: 1rem; */
-                    margin: 1rem;
-
+                    gap: 1rem;
                 }
                 .sect1 h1 {
                     font-size: 3rem;
