--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
+                width: 100vw;
+                overflow-x: hidden;
             }
             .sect2 .inst {
                 width: 90%;
@@ -227,7 +229,6 @@
                 left: -50%;
                 opacity: 0.5;
                 transition: opacity 1s, left 1s ease-in-out, box-shadow .5s;
-                overflow-x: hidden;
             }
             .inst>img {
                 display: block;
