renamed angela with maximillian

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <div class="awards">
                 <span>Certifications</span>
                 <ul>
-                    <li>Flutter Course by Angela</li>
+                    <li>Flutter Course by Maximillian Schwartzmuller</li>
                     <li>Social Networks</li>
                     <li>Joy Of Computing with Python</li>
                 </ul>
