updated index.html file to make some design change

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
             <p>Everything starting from frontend to backend. I like tinkering with new technologies. I am also an ardent devotee of python. I have done many projects in python and Django. If any of this sounds interesting to you, just ping me!!:)</p>
             <div class="cards">
                 <div class="card">
+                    <img src="https://i.ibb.co/kgWJnSd/figma-Icon.png" alt="figma-Icon" border="0">
                     <h3>Designing</h3>
                     <p>I love designing UIs. My tool of trade is Figma. I personally design most of my projects</p>
-                    <button class="btn2">Learn More</button>
                 </div>
                 <div class="card">
+                    <img src="https://i.ibb.co/c3GrjRZ/code2.png" alt="code2" border="0">
                     <h3>Development</h3>
                     <p>I am a developer too! I know C, C++, JS, Python. I have used many packages in python to build my projects too. I use django, a web framework with high security, as my backend.</p>
-                    <button class="btn2">Learn More</button>
                 </div>
                 <div class="card">
+                    <img src="https://i.ibb.co/ZBy88Sr/reading.png" alt="reading" border="0">
                     <h3>Reading</h3>
                     <p>Apart from this, I read a lot.. In the past, I have even written articles for newspapers. This hobby of mine has given me good communication skills.</p>
-                    <button class="btn2">Learn More</button>
                 </div>
             </div>
             <button class="btn1">Download CV</button>
@@ -75,7 +75,7 @@
             <h2>My <span class="coloredText">education...</span></h2>
             <div class="carousal">
                 <div class="slide">
-                    <img src="assets/gec.jpg" alt="GEC">
+                    <img loading="lazy" src="assets/gec.jpg" alt="GEC">
                     <div>
                         <h3>Bachelor Of Engineering</h3>
                         <span>Goa College Of Engineering</span>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="assets/School_image.jpg" alt="Shree Damodar">
+                    <img loading="lazy" src="assets/School_image.jpg" alt="Shree Damodar">
                     <div>
                         <h3>Higher Secondary Education</h3>
                         <span>Shree Damodar Higher Secondary School Of Science</span>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="assets/School_image.jpg" alt="Shree Damodar">
+                    <img loading="lazy" src="assets/School_image.jpg" alt="Shree Damodar">
                     <div>
                         <h3>High School Education</h3>
                         <span>Shree Damodar Vidhyalaya English High School</span>
@@ -105,40 +105,40 @@
             <p>I am a continuous learner. I never get bored watching and doing tech. In this journey as a computer science engineer, I have mastered quite a few skills...</p>
             <div class="skills">
                 <div class="skill">
-                    <img src="assets/pythonIcon.png" alt="Python Icon">
+                    <img loading="lazy" src="assets/pythonIcon.png" alt="Python Icon">
                     <p>Python</p>
                 </div>
                 <div class="skill">
-                    <img src="assets/django-logo-negative.png" alt="Django Icon">
+                    <img loading="lazy" src="assets/django-logo-negative.png" alt="Django Icon">
                     <p>Django</p>
                 </div>
                 <div class="skill">
-                    <img src="assets/c++.png" alt="C++ Icon">
+                    <img loading="lazy" src="assets/c++.png" alt="C++ Icon">
                     <p>C++ Icon</p>
                 </div>
                 <div class="skill">
-                    <img src="assets/js.png" alt="JS Icon">
+                    <img loading="lazy" src="assets/js.png" alt="JS Icon">
                     <p>JS</p>
                 </div>
                 <div class="skill">
-                    <img src="assets/htmlandcss.png" alt="HTML and CSS Icon">
+                    <img loading="lazy" src="assets/htmlandcss.png" alt="HTML and CSS Icon">
                     <p>HTML and CSS</p>
                 </div>
                 <div class="skill">
-                    <img src="assets/andmanymore.png" alt="and many more">
+                    <img loading="lazy" src="assets/andmanymore.png" alt="and many more">
                     <p>And Many more...</p>
                 </div>
             </div>
             <h3 class="subheader">Certifications</h3>
             <div class="certi">
                 <div>
-                    <img src="assets/0001.jpg" alt="Inspirus2k20">
+                    <img loading="lazy" src="assets/0001.jpg" alt="Inspirus2k20">
                 </div>
                 <div>
-                    <img src="assets/joc.jpg" alt="Joy Of Computing Python">
+                    <img loading="lazy" src="assets/joc.jpg" alt="Joy Of Computing Python">
                 </div>
                 <div>
-                    <img src="assets/pdsap.jpg" alt="Joy Of Computing Python">
+                    <img loading="lazy" src="assets/pdsap.jpg" alt="Joy Of Computing Python">
                 </div>
             </div>
         </section>
@@ -147,7 +147,7 @@
             <p>I have many projects to show you. Let me tell you, I am currently learning Git and Github. I havent uploaded most of my codes/projects yet. So I have listed only a few here.</p>
             <div class="projects">
                 <div class="proj shine">
-                    <img src="assets/pygame.png" alt="pygameIcon">
+                    <img loading="lazy" src="assets/pygame.png" alt="pygameIcon">
                     <p>Built a 2D game using pygame module in python. Called RoboWars, it has 3 levels, where two opponent robots fight against each other. Click for more!!!</p>
                 </div>
             </div>
