updated index.html to add carousal to certificates

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Next section for education and skills -->
         <section class="sect sect2" id="education">
             <h2>My <span class="coloredText">education...</span></h2>
-            <div class="carousal">
+            <div class="placesOfEducation">
                 <div class="slide">
                     <img loading="lazy" src="assets/gec.jpg" alt="GEC">
                     <div>
@@ -85,19 +85,19 @@
                 <div class="slide">
                     <img loading="lazy" src="assets/School_image.jpg" alt="Shree Damodar">
                     <div>
-                        <h3>Higher Secondary Education</h3>
-                        <span>Shree Damodar Higher Secondary School Of Science</span>
-                        <span>2017-19</span>
+                        <h3>Secondary and Higher Secondary Education</h3>
+                        <span>Shree Damodar Vidhyalaya, Shree Damodar Higher Secondary School Of Science</span>
+                        <span>2010-19</span>
                     </div>
                 </div>
-                <div class="slide">
+                <!-- <div class="slide">
                     <img loading="lazy" src="assets/School_image.jpg" alt="Shree Damodar">
                     <div>
                         <h3>High School Education</h3>
                         <span>Shree Damodar Vidhyalaya English High School</span>
                         <span>2010-17</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="sect sect2" id="SandAch">
@@ -130,15 +130,18 @@
                 </div>
             </div>
             <h3 class="subheader">Certifications</h3>
-            <div class="certi">
-                <div>
-                    <img loading="lazy" src="assets/0001.jpg" alt="Inspirus2k20">
+
+            <div class="carousal">
+                <div class="control-btn left-btn" data-x="-1"><span><</span></div>
+                <div class="control-btn right-btn" data-x="1"><span>></span></div>
+                <div data-index="1" class="page active">
+                    <img src="assets/0001.jpg" loading="lazy" alt="GEC">
                 </div>
-                <div>
-                    <img loading="lazy" src="assets/joc.jpg" alt="Joy Of Computing Python">
+                <div data-index="2" class="page next">
+                    <img src="assets/joc.jpg" loading="lazy" alt="joc">
                 </div>
-                <div>
-                    <img loading="lazy" src="assets/pdsap.jpg" alt="Joy Of Computing Python">
+                <div data-index="3" class="page">
+                    <img src="assets/pdsap.jpg" loading="lazy" alt="pdsap">
                 </div>
             </div>
         </section>
@@ -156,11 +159,11 @@
             <div class="social">
                 <h2>Sai Lolla</h2>
                 <ul class="links">
-                    <li><a target="_blank" href="https://github.com/" class="github">Github</a></li><!--
-                    --><li><a target="_blank" href="https://instagram.com/" class="instagram">Instagram</a></li><!--
-                    --><li><a target="_blank" href="https://linkedin.com/" class="linkedin">LinkedIn</a></li><!--
-                    --><li><a target="_blank" href="https://mail.google.com/" class="gmail">Gmail</a></li><!--
-                --><li><a target="_blank" href="https://www.twitter.com/" class="twitter">Twitter</a></li>
+                    <li><a target="_blank" href="https://github.com/lolla-sai" class="github">Github</a></li><!--
+                    --><li><a target="_blank" href="https://www.instagram.com/lolla_sai/" class="instagram">Instagram</a></li><!--
+                    --><li><a target="_blank" href="https://www.linkedin.com/in/sai-l-266a88131/" class="linkedin">LinkedIn</a></li><!--
+                    --><li><a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&to=saisameer.lolla@gmail.com" class="gmail">Gmail</a></li><!--
+                --><li><a target="_blank" href="https://twitter.com/lolla_sai" class="twitter">Twitter</a></li>
                 </ul>
             </div>
             <div>Get latest news from me</div>
