added dead link route

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <h1>Personal Portfolio</h1>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="./maintainance.html">Blog</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <div class="right">
                     <li><a href="#contact">Contact Me</a></li>
                 </div>
