dark-light alternative sections portfolio

--- a/index.html
+++ b/index.html
@@ -90,44 +90,16 @@
                         <span>2010-19</span>
                     </div>
                 </div>
-                <!-- <div class="slide">
-                    <img loading="lazy" src="assets/School_image.jpg" alt="Shree Damodar">
-                    <div>
-                        <h3>High School Education</h3>
-                        <span>Shree Damodar Vidhyalaya English High School</span>
-                        <span>2010-17</span>
-                    </div>
-                </div> -->
             </div>
         </section>
         <section class="sect sect2" id="SandAch">
             <h2>I am <span class="coloredText">skilled in...</span></h2>
-            <p>I am a continuous learner. I never get bored watching and doing tech. In this journey as a computer science engineer, I have mastered quite a few skills...</p>
             <div class="skills">
-                <div class="skill">
-                    <img loading="lazy" src="assets/pythonIcon.png" alt="Python Icon">
-                    <p>Python</p>
+                <div>
+                    <p>I am a continuous learner. I never get bored watching and doing tech. In this journey as a computer science engineer, I have picked up many skills. I know Python, JS, C/C++, HTML5, CSS3, JS (ES6), and django to name a few.</p>
+                    <p>I have built this site using HTML/CSS/JS as front end and Python/Django as backend. Apart from this, I am also a cricket and chess player.</p>
                 </div>
-                <div class="skill">
-                    <img loading="lazy" src="assets/django-logo-negative.png" alt="Django Icon">
-                    <p>Django</p>
-                </div>
-                <div class="skill">
-                    <img loading="lazy" src="assets/c++.png" alt="C++ Icon">
-                    <p>C++ Icon</p>
-                </div>
-                <div class="skill">
-                    <img loading="lazy" src="assets/js.png" alt="JS Icon">
-                    <p>JS</p>
-                </div>
-                <div class="skill">
-                    <img loading="lazy" src="assets/htmlandcss.png" alt="HTML and CSS Icon">
-                    <p>HTML and CSS</p>
-                </div>
-                <div class="skill">
-                    <img loading="lazy" src="assets/andmanymore.png" alt="and many more">
-                    <p>And Many more...</p>
-                </div>
+                <img src="assets/svgs/skillsSVG.svg" alt="skills svg">
             </div>
             <h3 class="subheader">Certifications</h3>
 
